<resources>
    <string name="app_name">TFC</string>


    <string name="select">Choose a country</string>
    <string-array name="cusine_array">
        <item>Cusine Type</item>
        <item>Chinese</item>
        <item>Italian</item>
        <item>Indian</item>
        <item>Mugalai</item>
        <item>Thai</item>
        <item>American</item>
        <item>Maxican</item>
        <item>Cajun</item>
        <item>Soul Food</item>
        <item>Greek Cuisine</item>
        <item>Japanese</item>
        <item>Moroccan</item>
        <item>French Food</item>
        <item>Others</item>
    </string-array>

    <string name="selectday">Choose a country</string>
    <string-array name="closingDay_array">
        <item>Closing Days</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="selecttime">Choose a country</string>
    <string-array name="closingTime_array">
        <item>Closing Time</item>
        <item>Early Night</item>
        <item>Mid Night</item>
        <item>Late Night</item>

    </string-array>

    <string name="foodtype">Choose a FoodType</string>
    <string-array name="foodtype_array">
        <item>Please Select Food Type</item>
        <item>Veg</item>
        <item>Non-Veg</item>

    </string-array>

    <string name="collectiontime">Choose a FoodType</string>
    <string-array name="collection_array">
        <item>Collection Time</item>
        <item>12.00 - 12.30 PM</item>
        <item>12.30 - 1.00 PM</item>
        <item>1.00 - 1.30 PM</item>
        <item>1.30 - 2.00 PM</item>
        <item>2.00 - 2.30 PM</item>
        <item>2.30 - 3.00 PM</item>
        <item>3.00 - 3.30 PM</item>
        <item>3.30 - 4.00 PM</item>
        <item>4.00 - 4.30 PM</item>
        <item>4.30 - 5.00 PM</item>
        <item>5.00 - 5.30 PM</item>
        <item>5.30 - 6.00 PM</item>
        <item>6.00 - 6.30 PM</item>
        <item>6.30 - 7.00 PM</item>
        <item>7.00 - 7.30 PM</item>
        <item>7.30 - 8.00 PM</item>
        <item>8.00 - 8.30 PM</item>
        <item>8.30 - 9.00 PM</item>
        <item>9.00 - 9.30 PM</item>
        <item>9.30 - 10.00 PM</item>
        <item>10.00 - 10.30 PM</item>
        <item>10.30 - 11.00 PM</item>
        <item>11.00 - 11.30 PM</item>
        <item>11.30 - 12.00 PM</item>
        <item>12.00 - 12.30 AM</item>
        <item>12.30 - 1.00 AM</item>
        <item>1.00 - 1.30 AM</item>
        <item>8.00 - 8.30 PM</item>
        <item>8.30 - 9.00 PM</item>
        <item>9.00 - 9.30 PM</item>
        <item>9.30 - 10.00 PM</item>
        <item>10.00 - 10.30 PM</item>
        <item>10.30 - 11.00 PM</item>
        <item>11.00 - 11.30 PM</item>
        <item>11.30 - 12.00 PM</item>
        <item>12.00 - 12.30 AM</item>
        <item>12.30 - 1.00 AM</item>
        <item>1.00 - 1.30 AM</item>
        <item>1.30 - 2.00 AM</item>
        <item>2.00 - 2.30 AM</item>
        <item>2.30 - 3.00 AM</item>
        <item>3.00 - 3.30 AM</item>
        <item>3.30 - 4.00 AM</item>
        <item>4.00 - 4.30 AM</item>
        <item>4.30 - 5.00 AM</item>
        <item>5.00 - 5.30 AM</item>
        <item>5.30 - 6.00 AM</item>
        <item>6.00 - 6.30 AM</item>
        <item>6.30 - 7.00 AM</item>
        <item>7.00 - 7.30 AM</item>
        <item>7.30 - 8.00 AM</item>
        <item>8.00 - 8.30 AM</item>
        <item>8.30 - 9.00 AM</item>
        <item>9.00 - 9.30 AM</item>
        <item>9.30 - 10.00 AM</item>
        <item>10.00 - 10.30 AM</item>
        <item>10.30 - 11.00 AM</item>
        <item>11.00 - 11.30 AM</item>
        <item>11.30 - 12.00 AM</item>
    </string-array>


    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_business_navigation">BusinessNavigation</string>


    <string name="terms1">1. The food circle is registered in England and wales. Company number ....</string>
    <string name="terms2">2. We provide a platform between customer and business.</string>
    <string name="terms3">3. By using of our website or mobile application you indicate that you accept our terms and condition.</string>
    <string name="terms4">4. We reserve the right to change terms and condition at any time. Please visit our website for the latest terms and conditions.</string>
    <string name="terms5">5. all persons who access the Website through your internet connection are aware of these Website Terms and that they comply with them.
</string>



    <string name="terms6">6. By placing order, you are entering in to binding contract between you and business.</string>
    <string name="terms7">7. Once your order is confirmed you are responsible for collection.</string>
    <string name="terms8">8. Order cannot be cancelled if you have passed the deadline.</string>
    <string name="terms9">9. Any unforeseen circumstances please let the us know ASAP.</string>
    <string name="terms10">10.Please not that we are fighting against food waste. Please do not book if you cannot collect your order.</string>
    <string name="terms11">11.Deadline for cancelation is 3 hours before collection time start.</string>
    <string name="terms12">12. We will notify you via email or application notification, once your order is confirmed, for acceptance or rejection of your order.</string>
    <string name="terms13">13.Stores have the discretion to reject Orders at any time because they are too busy, due to weather conditions or for any other reason.</string>
    <string name="terms14">14.Businesses are responsible for any health and hygiene dispute.</string>
    <string name="terms15">15.It is the Stores that are responsible for providing this menu information and ensuring that it is factually accurate and up-to-date, and we do not undertake any such responsibility. If you are in doubt about allergy warnings, contents of a dish or any other menu information, you should confirm with the Store directly before ordering.</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>

</resources>
